<resources>
    <string name="app_name">个人项目</string>

    <string name="load_fail">加载失败,点击重试</string>

    <!-- 基本的权限 -->
    <string-array name="basic_permissions">
        <item>android.permission.READ_EXTERNAL_STORAGE</item>
        <item>android.permission.WRITE_EXTERNAL_STORAGE</item>
        <item>android.permission.READ_PHONE_STATE</item>
        <item>android.permission.READ_PHONE_STATE</item>
    </string-array>

    <!--侧滑菜单-->
    <string name="text_drawer_name">TwoOrEleven</string>
    <string name="text_drawer_email">758220158@qq.com</string>

    <string name="text_nav_home">项目主页</string>
    <string name="text_nav_bookmarks">扫码下载</string>
    <string name="text_change_theme">切换主题</string>
    <string name="text_nav_settings">设置</string>
    <string name="text_nav_about">关于云阅</string>
    <string name="change_title">我的游戏</string>
    <string name="complete">完成</string>
    <string name="look_more">更多</string>
    <string name="transition_book_img">transition_book_img</string>
    <string name="text_nav_question">问题反馈</string>
    <string name="text_nav_exit">退出应用</string>
    <string name="text_nav_loading">登陆GitHub</string>
    <string name="tv_movie_detail_more">更多介绍</string>
    <string name="welcome">立即进入</string>
    <string name="actionbar_more">更多信息</string>
    <string name="transition_movie_img">transition_movie_img</string>
    <string name="image_description">图片</string>
</resources>
